[package]
name = "t3rn-protocol"
version = "1.0.0-alpha.0"
authors = ["t3rn Ltd <team@t3rn.io>"]
edition = "2018"
homepage = "https://t3rn.io"
license = "Apache 2.0"
repository = "https://github.com/t3rn/t3rn/"
description = "A crate that implements the re-usable elements of t3rn protocol for composable cross-chain execution."

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
hex-literal = { version = '0.3.1' }
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.14", default-features = false }

# This crate should not rely on any of the frame primitives.
serde = { version = "1.0.124", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
sp-std = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8', default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8', default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8', default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8', default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8', default-features = false }
sp-keystore = { default-features = false, version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8', optional = true }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8' }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8' }
frame-metadata = { version = "14.0.0", features = ["v13", "v14"], default-features = false }
ethabi-decode = { git = "https://github.com/Snowfork/ethabi-decode.git", branch = "master", default-features = false }

pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8' }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8' }
bp-header-chain = { default-features = false, path = "../../vendor/bridges/primitives/header-chain" }
bp-messages = { default-features = false, path = "../../vendor/bridges/primitives/messages" }
bp-runtime = { default-features = false, path = "../../vendor/bridges/primitives/runtime" }
t3rn-primitives = { version = "0.1.0", default-features = false, path = "../primitives" }

pallet-bridge-messages = { default-features = false, path = "../../vendor/bridges/modules/messages" }
sp-application-crypto = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8' }
relay-substrate-client = { version = "0.1.0", path = "../../vendor/bridges/relays/client-substrate", optional = true }

snowbridge-core = { git = "https://github.com/t3rn/snowbridge", rev = "57eafa318d4b27d9d5c00c29e2db79504bd6ac77", default-features = false }
snowbridge-ethereum = { git = "https://github.com/t3rn/snowbridge", rev = "57eafa318d4b27d9d5c00c29e2db79504bd6ac77", default-features = false }

hash-db = { version = "0.15.2", default-features = false }
triehash = { version = "0.8.2", default-features = false }
plain_hasher = { version = "0.2.2", default-features = false }

[dev-dependencies]
serde_json = "1.0.59"
t3rn-primitives = { version = "0.1.0", path = "../primitives" }

[features]
default = ["std"]
std = [
    "serde/std",
    "relay-substrate-client",
    "codec/std",
    "hex/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-core/std",
    "sp-version/std",
    "sp-io/std",
    "sp-keystore/std",
    "bp-header-chain/std",
    "pallet-sudo/std",
    "frame-system/std",
    "frame-support/std",
    "frame-metadata/std",
    "t3rn-primitives/std",
    "pallet-bridge-messages/std",
    "sp-application-crypto/std",
    "hash-db/std",
    "triehash/std",
    "plain_hasher/std",
    "ethabi-decode/std",
    "snowbridge-core/std",
    "snowbridge-ethereum/std"
]
