[package]
name = "circuit-rpc-tests"
version = "3.0.0"
authors = ["t3rn Ltd."]
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
homepage = "https://t3rn.io"
repository = "https://github.com/t3rn/t3rn/"
description = "Circuit RPC Tests"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
async-std = { version = "1.6.5", features = ["attributes", "tokio1"] }
async-trait = "0.1.40"
jsonrpc-runtime-client = { version = "0.1.0", path = "jsonrpc-runtime-client" }
jsonrpc-core-client = { version = "15.1.0", features = ["http"] }
jsonrpsee-types = "0.2.0"
relay-substrate-client = { version = "0.1.0", path = "../../vendor/bridges/relays/client-substrate" }

futures = { version = "0.3.16", features = ["compat"] }
node-primitives = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-rpc-api = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-client-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-api = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
codec = { package = "parity-scale-codec", version = "2.0.0" }

jsonrpc-pubsub = "15.1.0"
jsonrpc-core = { version = "15.1.0" }
hex-literal = "0.3.1"
hex = "0.4.0"

log = "0.4.8"
env_logger = "0.8.2"

sp-version = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
serde_json = "1.0.41"
sp-session = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-offchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-runtime = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-utils = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-rpc = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-keystore = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-state-machine = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-chain-spec = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-executor = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-block-builder = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-keystore = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-blockchain = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
hash-db = { version = "0.15.2" }
parking_lot = "0.11.1"
sp-tracing = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
t3rn-primitives = { version = "0.1.0", path = "../primitives" }
sp-application-crypto = { git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8' }
sp-core = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-keyring = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }

tempfile = "3.1.0"

assert_matches = "1.3.0"
futures01 = { package = "futures", version = "0.1.29" }
lazy_static = "1.4.0"
frame-system = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
circuit-test-utils = { version = "0.1.0", path = "../test-utils" }
pallet-circuit-execution-delivery = { version = "0.1.0", path = "../pallets/execution-delivery" }
sc-network = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sp-io = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
substrate-test-runtime = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
substrate-test-runtime-client = { version = "2.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
bp-runtime = { path = "../../vendor/bridges/primitives/runtime" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
tokio = "0.1.22"
sc-transaction-pool = { version = "3.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
sc-cli = { version = "0.9.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.8" }
wat = "1"
circuit-runtime = {path = "../runtime" }
volatile-vm = { path = "../../vm/volatile-vm", default-features = false }
