[package]
name = "circuit-rpc"
version = "0.1.0"
authors = ["MaciejBaj <maciej@maciejbaj.com>"]
edition = "2018"
homepage = "https://t3rn.io"
license = "Apache 2.0"
repository = "https://github.com/t3rn/t3rn/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.124", features = ["derive"] }
codec = { package = "parity-scale-codec", version = "2.0.0" }
jsonrpc-core = "15.0.0"
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"

sc-rpc = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }
sp-blockchain = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }
sp-core = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }
sp-rpc = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }
sp-std = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }
sp-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }

t3rn-primitives = { version = "0.1.0", path = "../primitives" }
circuit-rpc-runtime-api = { version = "0.1.0", path = "runtime-api" }
pallet-contracts-registry = { path = "../pallets/contracts-registry" }
pallet-contracts-registry-rpc = { path = "../pallets/contracts-registry/rpc" }
pallet-contracts-registry-rpc-runtime-api = { path = "../pallets/contracts-registry/rpc/runtime-api" }

[dev-dependencies]
serde_json = "1.0.67"
