[package]
name = "circuit-runtime"
version = "0.4.0"
authors = ["t3rn team <team@t3rn.io>"]
edition = "2018"
homepage = "https://t3rn.io"
repository = "https://github.com/t3rn/t3rn"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3", optional = true}
serde = { version = "1.0.124", optional = true, features = ["derive"] }

# Bridge dependencies

bp-messages = { path = "../../bridges/primitives/messages" , default-features = false }
bp-runtime = { path = "../../bridges/primitives/runtime", default-features = false }
bp-gateway = { path = "../../bridges/primitives/chain-gateway", default-features = false }
bp-circuit = { path = "../../bridges/primitives/chain-circuit", default-features = false }
bp-polkadot-core = { path = "../../bridges/primitives/polkadot-core" , default-features = false }
bp-westend = { git = "https://github.com/t3rn/parity-bridges-common", branch = "polkadot-v0.9.10-dev", default-features = false }
bridge-runtime-common = { git = "https://github.com/t3rn/parity-bridges-common", branch = "polkadot-v0.9.10-dev", default-features = false }
pallet-bridge-dispatch = { path = "../../bridges/modules/dispatch", default-features = false }
pallet-bridge-grandpa = { git = "https://github.com/t3rn/parity-bridges-common", branch = "polkadot-v0.9.10-dev", default-features = false }
pallet-multi-finality-verifier = { path = "../../bridges/modules/multi-finality-verifier", default-features = false }
pallet-bridge-messages = { path = "../../bridges/modules/messages", default-features = false }
pallet-shift-session-manager = { git = "https://github.com/t3rn/parity-bridges-common", branch = "polkadot-v0.9.10-dev", default-features = false }

# Circuit dependencies
pallet-contracts-registry = {  path = "../pallets/contracts-registry", default-features = false }
pallet-contracts-registry-rpc-runtime-api = {  path = "../pallets/contracts-registry/rpc/runtime-api", default-features = false }
pallet-circuit-execution-delivery = {  path = "../pallets/execution-delivery", default-features = false }
pallet-xdns = { path = "../pallets/xdns", default-features = false }
volatile-vm = { path = "../../vm/volatile-vm", default-features = false }
t3rn-primitives = { version = "0.1.0", default-features = false, path = "../primitives" }
circuit-rpc-runtime-api = { path = "../rpc/runtime-api", default-features = false }

# Smart contracts VMs
pallet-evm = { path = "../../../frontier/frame/evm", default-features = false  }
pallet-ethereum = { path = "../../../frontier/frame/ethereum", default-features = false  }
pallet-evm-precompile-simple = { path = "../../../frontier/frame/evm/precompile/simple", default-features = false }
pallet-contracts = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }

# Substrate Dependencies
frame-executive = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' , default-features = false }

# Beefy dependencies
beefy-primitives = { git = "https://github.com/t3rn/grandpa-bridge-gadget", branch = 'polkadot-v0.9.10', default-features = false }
pallet-beefy = { git = "https://github.com/t3rn/grandpa-bridge-gadget", branch = 'polkadot-v0.9.10', default-features = false }

# snowbridge dependencies
ethereum-light-client = { path = "../../../snowbridge/parachain/pallets/ethereum-light-client", package = "snowbridge-ethereum-light-client", default-features = false }

# Benchmarking
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10', optional = true}
frame-system-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10', optional = true}

[build-dependencies]
substrate-wasm-builder = "4.0.0"

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"bp-westend/std",
	"bp-gateway/std",
	"bp-circuit/std",
	"bp-polkadot-core/std",
	"bridge-runtime-common/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"t3rn-primitives/std",
	"pallet-xdns/std",
	"volatile-vm/std",
	# native contracts VMs
	"pallet-contracts/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
	"pallet-evm-precompile-simple/std",
	"pallet-contracts-registry/std",
	"pallet-circuit-execution-delivery/std",
	"pallet-balances/std",
	"pallet-bridge-dispatch/std",
	"pallet-bridge-grandpa/std",
	"pallet-multi-finality-verifier/std",
	"pallet-bridge-messages/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-shift-session-manager/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"circuit-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-mmr/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-trie/std",
	"sp-version/std",
	"pallet-utility/std",
	"beefy-primitives/std",
	"pallet-beefy/std",
	"ethereum-light-client/std"
]
# TODO: https://github.com/paritytech/parity-bridges-common/issues/390
# I've left the feature flag here to test our CI configuration
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    # 'pallet-circuit-execution-delivery/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
	'pallet-contracts-registry/runtime-benchmarks',
]
