[package]
name = "circuit-runtime"
version = "0.4.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/parity-bridges-common/"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3", optional = true}
serde = { version = "1.0.124", optional = true, features = ["derive"] }
log = { version = "0.4.14", default-features = false }

# Bridge dependencies

bp-messages = { path = "../../vendor/bridges/primitives/messages", default-features = false }
bp-runtime = { path = "../../vendor/bridges/primitives/runtime", default-features = false }
bp-gateway = { path = "../../vendor/bridges/primitives/chain-gateway", default-features = false }
bp-circuit = { path = "../../vendor/bridges/primitives/chain-circuit", default-features = false }
bp-polkadot-core = { path = "../../vendor/bridges/primitives/polkadot-core", default-features = false }
bp-westend = { path = "../../vendor/bridges/primitives/chain-westend", default-features = false }
bridge-runtime-common = { path = "../../vendor/bridges/bin/runtime-common", default-features = false }
pallet-bridge-dispatch = { path = "../../vendor/bridges/modules/dispatch", default-features = false }
pallet-bridge-grandpa = { path = "../../vendor/bridges/modules/grandpa", default-features = false }
pallet-multi-finality-verifier = { path = "../../vendor/bridges/modules/multi-finality-verifier", default-features = false }
pallet-bridge-messages = { path = "../../vendor/bridges/modules/messages", default-features = false }
pallet-shift-session-manager = { path = "../../vendor/bridges/modules/shift-session-manager", default-features = false }

# Circuit dependencies
pallet-contracts-registry = {  path = "../pallets/contracts-registry", default-features = false }
pallet-contracts-registry-rpc-runtime-api = {  path = "../pallets/contracts-registry/rpc/runtime-api", default-features = false }
pallet-circuit-execution-delivery = {  path = "../pallets/execution-delivery", default-features = false }
pallet-circuit-execution-delivery-rpc-runtime-api = {  path = "../pallets/execution-delivery/rpc/runtime-api", default-features = false }
pallet-xdns = { path = "../pallets/xdns", default-features = false }
pallet-xdns-rpc-runtime-api = { path = "../pallets/xdns/rpc/runtime-api", default-features = false }
volatile-vm = { path = "../../vm/volatile-vm", default-features = false }
t3rn-primitives = { version = "0.1.0", default-features = false, path = "../primitives" }

# Smart contracts VMs
pallet-evm = { path = "../../vendor/frontier/frame/evm", default-features = false  }
pallet-ethereum = { path = "../../vendor/frontier/frame/ethereum", default-features = false  }
pallet-evm-precompile-simple = { path = "../../vendor/frontier/frame/evm/precompile/simple", default-features = false }
pallet-contracts = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }
pallet-contracts-primitives = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }
pallet-contracts-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' }

# Substrate Dependencies
frame-executive = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
pallet-mmr = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-api = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-trie = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8' , default-features = false }

# Beefy dependencies
beefy-primitives = { git = "https://github.com/t3rn/grandpa-bridge-gadget", branch = 'polkadot-v0.9.8', default-features = false }
pallet-beefy = { git = "https://github.com/t3rn/grandpa-bridge-gadget", branch = 'polkadot-v0.9.8', default-features = false }
pallet-beefy-mmr = { path = "../pallets/beefy-mmr-pallet", default-features = false}
pallet-mmr-primitives = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.8', default-features = false }

# snowbridge dependencies
ethereum-light-client = { git = "https://github.com/t3rn/snowbridge", package = "snowbridge-ethereum-light-client", default-features = false }
snowbridge-basic-channel = { git = "https://github.com/t3rn/snowbridge", rev = "57eafa318d4b27d9d5c00c29e2db79504bd6ac77", default-features = false }

# Benchmarking
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8', optional = true}
frame-system-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = 'polkadot-v0.9.8', optional = true}

[build-dependencies]
substrate-wasm-builder = "3.0.0"

[features]
default = ["std"]
std = [
	"bp-messages/std",
	"bp-runtime/std",
	"bp-westend/std",
	"bp-gateway/std",
	"bp-circuit/std",
	"bp-polkadot-core/std",
	"bridge-runtime-common/std",
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"t3rn-primitives/std",
	"pallet-xdns/std",
	"volatile-vm/std",
	# native contracts VMs
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
	"pallet-evm-precompile-simple/std",
	"pallet-contracts-registry/std",
	"pallet-circuit-execution-delivery/std",
	"pallet-circuit-execution-delivery-rpc-runtime-api/std",
	"pallet-balances/std",
	"pallet-bridge-dispatch/std",
	"pallet-bridge-grandpa/std",
	"pallet-multi-finality-verifier/std",
	"pallet-bridge-messages/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-session/std",
	"pallet-shift-session-manager/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-mmr/std",
	"pallet-transaction-payment/std",
	"serde",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-finality-grandpa/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-trie/std",
	"sp-version/std",
	"pallet-utility/std",
	"beefy-primitives/std",
	"pallet-beefy/std",
	"ethereum-light-client/std",
	"pallet-beefy-mmr/std",
	"pallet-mmr-primitives/std",
	"snowbridge-basic-channel/std"
]
# TODO: https://github.com/paritytech/parity-bridges-common/issues/390
# I've left the feature flag here to test our CI configuration
runtime-benchmarks = [
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'hex-literal',
    'pallet-balances/runtime-benchmarks',
    'pallet-circuit-execution-delivery/runtime-benchmarks',
	  'pallet-xdns/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
	'pallet-contracts-registry/runtime-benchmarks',
]
