[package]
name = "circuit-test-utils"
version = "0.1.0"
edition = "2018"

[dependencies]
jsonrpsee-types = "0.2.0"

codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

frame-metadata = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10', default-features = false }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.10' }
relay-substrate-client = { version = "0.1.0", path = "../../bridges/relays/client-substrate" }

pallet-circuit-execution-delivery = { version = "0.1.0", path = "../pallets/execution-delivery" }
