
[package]
authors    = [ "t3rn ltd. <team@t3rn.io>" ]
edition    = "2018"
homepage   = "https://t3rn.io"
license    = "Apache 2.0"
name       = "t3rn-light-client-commons"
repository = "https://github.com/t3rn/t3rn/"
version    = "1.5.0-rc.0"

[dependencies]
codec            = { package = "parity-scale-codec", version = "3", default-features = false }
scale-info       = { version = "2", default-features = false, features = [ "derive" ] }
serde            = { version = "1.0", default-features = false, optional = true }

# Substrate Dependencies
frame-support = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
frame-system  = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }

sp-core             = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-runtime          = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-std              = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }

t3rn-abi        = { path = "../../types/abi", features = ["runtime"], default-features = false }

[features]
default = [ "std" ]
runtime-benchmarks = [  ]
std = [
  "codec/std",
  "scale-info/std",

  "frame-support/std",
  "frame-system/std",

  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",

  "serde/std",

  "t3rn-abi/std",
]
