
[package]
authors    = [ "t3rn ltd. <team@t3rn.io>" ]
edition    = "2018"
homepage   = "https://t3rn.io"
license    = "Apache 2.0"
name       = "t3rn-light-client-commons"
repository = "https://github.com/t3rn/t3rn/"
version    = "1.5.0-rc.0"

[dependencies]
codec            = { workspace = true, package = "parity-scale-codec" }
scale-info       = { workspace = true }
serde            = { workspace = true, optional = true }

# Substrate Dependencies
frame-support = { workspace = true }
frame-system  = { workspace = true }

sp-core             = { workspace = true}
sp-runtime          = { workspace = true }
sp-std              = { workspace = true}

t3rn-abi        = { path = "../../types/abi", features = ["runtime"], default-features = false }

[features]
default = [ "std" ]
runtime-benchmarks = [  ]
std = [
  "codec/std",
  "scale-info/std",

  "frame-support/std",
  "frame-system/std",

  "sp-runtime/std",
  "sp-core/std",
  "sp-std/std",

  "serde/std",

  "t3rn-abi/std",
]
