[package]
authors     = [ "devs @ t3rn" ]
description = "Light Clients commons, primitives and traits to be implemented by Finality Verifiers"
edition     = "2018"
homepage    = "https://t3rn.io"
license     = "Apache-2.0"
name        = "light-client-common"
repository  = 'https://github.com/t3rn/t3rn'
version     = "1.0.0-alpha.0"

[dependencies]
scale-info        = { version = "2.1.1", default-features = false, features = [ "derive" ] }
codec             = { package = "parity-scale-codec", version = "3", default-features = false, features = [ "derive" ] }
sp-core           = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-std            = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }
sp-runtime        = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }

frame-system      = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.27', default-features = false }

[features]
default = [ "std" ]
std     = [ "frame-system/std", "sp-runtime/std", "sp-core/std", "sp-std/std", "codec/std", "scale-info/std" ]
