
[package]
authors    = [ "t3rn ltd. <team@t3rn.io>" ]
edition    = "2018"
homepage   = "https://t3rn.io"
license    = "Apache 2.0"
name       = "pallet-grandpa-finality-verifier"
repository = "https://github.com/t3rn/t3rn/"
version    = "1.0.0-alpha.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec            = { package = "parity-scale-codec", version = "3", default-features = false }
finality-grandpa = { version = "0.15", default-features = false }
log              = { version = "0.4.14", default-features = false }
scale-info       = { version = "2.0.0", default-features = false, features = [ "derive" ] }
serde            = { version = "1.0", default-features = false, optional = true }

# Substrate Dependencies

frame-support       = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }
frame-system        = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }
sp-core             = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }
sp-state-machine    = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }
sp-runtime          = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }
sp-std              = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }
num-traits          = { version = "0.2", default-features = false }
hash-db             = { version = "0.15.2", default-features = false }
sp-trie             = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }
sp-io               = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', default-features = false }

# These are the testing dependencies that we are now selecting via future flag
ed25519-dalek       = { version = "1.0", features = [ "u64_backend" ], optional = true}
pallet-balances     = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', optional = true }
pallet-sudo         = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', optional = true }
pallet-timestamp    = { git = "https://github.com/paritytech/substrate", branch = 'polkadot-v0.9.19', optional = true }
hex                 = { package = "rustc-hex", version = "2.1.0", optional = true }
hex-literal         = { version = "0.3.1", optional = true }

[features]
default = [ "std" ]
runtime-benchmarks = [  ]
testing = [
  "ed25519-dalek",
  "pallet-balances",
  "pallet-sudo",
  "pallet-timestamp",
  "hex",
  "hex-literal"
]
std = [
  "codec/std",
  "finality-grandpa/std",
  "frame-support/std",
  "frame-system/std",
  "log/std",
  "serde/std",
  "sp-finality-grandpa/std",
]
